修改路径，删除部分build文件

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build NAStool Image
+name: Build NAStoolx Image
 on:
   workflow_dispatch:
   push:
@@ -7,7 +7,6 @@ on:
     paths:
       - version.py
       - docker/Dockerfile
-      - docker/Dockerfile.lite
       - .github/workflows/build.yml
       - requirements.txt
 jobs:
