--- a/.github/workflows/build-base.yml
+++ b/.github/workflows/build-base.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/Dockerfile
+          file: docker/Dockerfile-Base
           platforms: |
             linux/amd64
             linux/arm64
