修改启动脚本

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,6 @@ RUN python_ver=$(python3 -V | awk '{print $2}') \
     && git config --global pull.ff only \
     && git clone --depth=1 ${REPO_URL} ${WORKDIR} \
     && git config --global --add safe.directory ${WORKDIR} \
-    && chmod +x /nas-tools/docker/entrypoint.sh
 EXPOSE 3000
 VOLUME ["/config"]
-ENTRYPOINT ["/nas-tools/docker/entrypoint.sh"]
+ENTRYPOINT ["sh /nas-tools/docker/entrypoint.sh"]
